# userver-nix-hello-example

./: CMakeLists.txt  README.md  flake.nix
configs/: static_config.yaml
src/: hello_handler.hpp  main.cpp
